--- a/public/index.html
+++ b/public/index.html
@@ -29,9 +29,16 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>React App</title>
+  <title>InstaYa</title>
 </head>
-
+<style>
+  body{
+    background:#06283D;
+  }
+  a{
+    color: white;
+  }
+</style>
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
